# busrpc-dev

./: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
cmake/: FetchCLI11.cmake  FetchGtest.cmake  FetchNlohmannJson.cmake  FetchProtobuf.cmake
src/: app.cpp  app.h  command_line_parser.cpp  configure.h.in  constants.h  error_collector.cpp  error_collector.h  exception.h  main.cpp  protobuf_error_collector.h  types.h  utils.cpp  utils.h
src/commands/: command.cpp  command.h  command_args.cpp  command_args.h  command_id.h  error_collector.cpp  error_collector.h
src/commands/check/: check_command.cpp  check_command.h
src/commands/configure/: configure_command.cpp  configure_command.h  lang_options.h
src/commands/gendoc/: gendoc_command.cpp  gendoc_command.h
src/commands/help/: help_command.cpp  help_command.h
src/commands/imports/: imports_command.cpp  imports_command.h
src/commands/version/: version_command.cpp  version_command.h
src/entities/: api.cpp  api.h  class.cpp  class.h  constant.cpp  constant.h  entity.cpp  entity.h  enum.cpp  enum.h  field.cpp  field.h  implementation.cpp  implementation.h  implemented_method.cpp  implemented_method.h  invoked_method.cpp  invoked_method.h  method.cpp  method.h  namespace.cpp  namespace.h  project.cpp  project.h  service.cpp  service.h  services.cpp  services.h  struct.cpp  struct.h
src/generators/: generator.h  json_generator.cpp  json_generator.h
src/parser/: parser.cpp  parser.h
tests/: CMakeLists.txt  api_entity_tests.cpp  bitwise_enum_tests.cpp  check_command_tests.cpp  class_entity_tests.cpp  command_args_tests.cpp  command_tests.cpp  common_entity_tests.cpp  configure_command_tests.cpp  entity_docs_tests.cpp  enum_entity_tests.cpp  error_collector_tests.cpp  exception_tests.cpp  gendoc_command_tests.cpp  help_command_tests.cpp  implementation_entity_tests.cpp  imports_command_tests.cpp  json_generator_tests.cpp  method_entity_tests.cpp  namespace_entity_tests.cpp  parser_tests.cpp  project_check_tests.cpp  project_entity_tests.cpp  project_validation_tests.cpp  service_entity_tests.cpp  services_entity_tests.cpp  struct_entity_tests.cpp  tests_configure.h.in  utils.cpp  utils.h  utils_tests.cpp  version_command_tests.cpp
tests/utils/: common.cpp  common.h  file_utils.cpp  file_utils.h  project_utils.cpp  project_utils.h
